# prom-write

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cliff.toml  deny.toml  flake.nix  remote_write.proto
.github/workflows/: ci.yaml  release.yaml
lib/: Cargo.toml  cliff.toml
lib/src/: lib.rs
