[package]
name = "prometheus_remote_write"
description = "Helpers for writing metrics to Prometheus over the remote write API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parse", "compression", "http"]

parse = ["dep:prometheus-parse"]
compression = ["dep:snap"]
http = ["compression", "dep:http", "dep:url"]

[dependencies]
prost = "0.12.1"

prometheus-parse = { version = "0.2.4", optional = true }
snap = { version = "1.1.0", optional = true }
url = { version = "2.4.1", optional = true }
ureq = { version = "2.8.0", default-features = false, features = ["tls", "rustls"], optional = true }
http = { version = "0.2.9", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
